--- a/css/platzi-badges.css
+++ b/css/platzi-badges.css
@@ -7,16 +7,17 @@
     display: inline-block;
     list-style: none;
     margin: 0 .7em 1.618em .7em;
+    max-width: 100px;
     text-align: center;
     vertical-align: top;
-    width: 120px;
+    width: 100%;
 }
 
 .platzi-badges-list__item img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100%;
+    width: 100%;
 }
 
 .platzi-badges-list__item span {
@@ -73,4 +74,16 @@
 
 .platzi-block {
     display: block !important;
+}
+
+@media (min-width: 768px) {
+    .platzi-badges-list__item {
+        max-width: 80px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .platzi-badges-list__item {
+        max-width: 100px;
+    }
 }
